--- a/about.html
+++ b/about.html
@@ -5,49 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg ">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Hello :3</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html"><i class="bi bi-house-door-fill"></i> Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="about.html"><i class="bi bi-file-person"></i> About me</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="portfolio.html"><i class="bi bi-briefcase-fill"></i> Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="prices.html"><i class="bi bi-coin"></i> Prices</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html"><i class="bi bi-envelope"></i> Contact</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-primary" type="submit">Search</button>
-            </form>
-          </div>
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Hello :3</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html"><i class="bi bi-house-door-fill"></i> Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html"><i class="bi bi-file-person"></i> About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html"><i class="bi bi-briefcase-fill"></i> Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="prices.html"><i class="bi bi-coin"></i> Prices</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html"><i class="bi bi-envelope"></i> Contact</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-primary" type="submit">Search</button>
+          </form>
         </div>
-    </nav>
+      </div>
+  </nav>
 
     <div class="about" id="about">
         <div class="container">
             <h1 class="text-center">Обо мне</h1>
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12">
-                    <img src="images/team-1.png" class="img-fluid">
-                    <span class="text-justify">Веб-разработчик</span>
+                    <img src="images/Sakamoto.png" class="img-fluid">
+                    <!-- <span class="text">Веб-разработчик</span> -->
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-12 desc">
                     <h3>Галкин Матвей</h3>
@@ -66,6 +68,5 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
