--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-primary" type="submit">Search</button>
+            <button class="btn btn-primary" type="submit">Search</button>
           </form>
         </div>
       </div>
@@ -58,7 +58,7 @@
           <img src="images/carousel_item_2.jpg" class="d-block w-100 c-img" alt="...">
         </div>
         <div class="carousel-item c-item">
-          <img src="images/carousel_item_3.jpg" class="d-block w-100 c-img" alt="...">
+          <img src="images/carousel_item_3.png" class="d-block w-100 c-img" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
